Regarding to PL #1758, As suggested we have made required changes in "_HomeGrid.cshtml" and "style.css" files and checke-in the code in GIT. Now, there will be vertical and horizontal simple scroll visible on grid view. I have tested this on IE 11, FF 42.0, and chrome 46.0 and its working fine, Please verify it and let me know in case of any issue.

--- a/RevenuePlanner/Content/css/style.css
+++ b/RevenuePlanner/Content/css/style.css
@@ -10271,7 +10271,10 @@ li.close-list {
     overflow-x: hidden;
     width: 242px;
     }
-    
+ 
+.task-tbl div.gridbox .objbox{  /*PL #1758*/
+        overflow: auto !important;
+}
 @media screen and (-webkit-min-device-pixel-ratio: 0), (-ms-high-contrast: active), (-ms-high-contrast: none) {
     .chrome-ie-height-720px {
         min-height: 720px !important;
